test: TransactionService DTO 반환 타입으로 테스트 코드 수정
- Transaction Entity → TransactionResponse DTO
- 서비스 레이어 DTO 반환 구조 변경에 따른 테스트 업데이트